k8s/base/ingress/default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipkit-default
  namespace: shipkit-system
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-api
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipkit-frontend
            port:
              number: 3000
